src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( NOT( ISBLANK( Birthdate ) ) ,
  IF( DATE( 2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( Birthdate ),
     YEAR (Today()) - YEAR ( Birthdate ) -1 ),
  null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benefits_Identification_Card_BIC__c</fullName>
        <label>Benefits Identification Card (BIC)#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizenship_Detail__c</fullName>
        <label>Citizenship Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Citizenship__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kennedy Amendment</fullName>
                </value>
                <value>
                    <fullName>Legal Permanent Resident</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Refuse to Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <label>Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Citizen</fullName>
                </value>
                <value>
                    <fullName>Eligible Non-Citizen</fullName>
                </value>
                <value>
                    <fullName>Neither of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alameda</fullName>
                </value>
                <value>
                    <fullName>Alpine</fullName>
                </value>
                <value>
                    <fullName>Amador</fullName>
                </value>
                <value>
                    <fullName>Butte</fullName>
                </value>
                <value>
                    <fullName>Calaveras</fullName>
                </value>
                <value>
                    <fullName>Colusa</fullName>
                </value>
                <value>
                    <fullName>Contra Costa</fullName>
                </value>
                <value>
                    <fullName>Del Norte</fullName>
                </value>
                <value>
                    <fullName>El Dorado</fullName>
                </value>
                <value>
                    <fullName>Fresno</fullName>
                </value>
                <value>
                    <fullName>Glenn</fullName>
                </value>
                <value>
                    <fullName>Humboldt</fullName>
                </value>
                <value>
                    <fullName>Imperial</fullName>
                </value>
                <value>
                    <fullName>Inyo</fullName>
                </value>
                <value>
                    <fullName>Kern</fullName>
                </value>
                <value>
                    <fullName>Kings</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
                <value>
                    <fullName>Lassen</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Madera</fullName>
                </value>
                <value>
                    <fullName>Marin</fullName>
                </value>
                <value>
                    <fullName>Mariposa</fullName>
                </value>
                <value>
                    <fullName>Mendocino</fullName>
                </value>
                <value>
                    <fullName>Merced</fullName>
                </value>
                <value>
                    <fullName>Modoc</fullName>
                </value>
                <value>
                    <fullName>Mono</fullName>
                </value>
                <value>
                    <fullName>Monterey</fullName>
                </value>
                <value>
                    <fullName>Napa</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disabled__c</fullName>
        <label>Disabled?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time,  More than one job</fullName>
                </value>
                <value>
                    <fullName>Full Time, One job</fullName>
                </value>
                <value>
                    <fullName>Not working, Disabled</fullName>
                </value>
                <value>
                    <fullName>On Leave</fullName>
                </value>
                <value>
                    <fullName>Part-Time</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Unemployed, Looking for work</fullName>
                </value>
                <value>
                    <fullName>Unemployed, Not looking for work</fullName>
                </value>
                <value>
                    <fullName>Consumer declined to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity_Sub_Category__c</fullName>
        <label>Ethnicity Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Ethnicity__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>Guatemalan</fullName>
                </value>
                <value>
                    <fullName>Mixteca</fullName>
                </value>
                <value>
                    <fullName>Mexican</fullName>
                </value>
                <value>
                    <fullName>Other Central American</fullName>
                </value>
                <value>
                    <fullName>Nicaraguan</fullName>
                </value>
                <value>
                    <fullName>Salvadoran</fullName>
                </value>
                <value>
                    <fullName>Other South American</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>Non-Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>Unavailable/Unknown</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>This field is configured in NPSP Settings &gt; Relationships &gt; Relationships as the Gender field. Do not delete this field unless you remove the reference or select another Gender field there.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Transgender</fullName>
                </value>
                <value>
                    <fullName>Group Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Condition__c</fullName>
        <label>Health Condition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alcohol and Drug Abuse</fullName>
                </value>
                <value>
                    <fullName>Allergy Conditions</fullName>
                </value>
                <value>
                    <fullName>Birth Defects</fullName>
                </value>
                <value>
                    <fullName>Blood Conditions</fullName>
                </value>
                <value>
                    <fullName>Cancer - All other</fullName>
                </value>
                <value>
                    <fullName>Cancer - Breast</fullName>
                </value>
                <value>
                    <fullName>Cancer - Lung</fullName>
                </value>
                <value>
                    <fullName>Cancer - Prostate</fullName>
                </value>
                <value>
                    <fullName>Childbirth Complications</fullName>
                </value>
                <value>
                    <fullName>Circulatory Conditions</fullName>
                </value>
                <value>
                    <fullName>Connective Tissue Conditions</fullName>
                </value>
                <value>
                    <fullName>Dental Conditions</fullName>
                </value>
                <value>
                    <fullName>Developmental Conditions</fullName>
                </value>
                <value>
                    <fullName>Developmental Disability</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Digestive Conditions</fullName>
                </value>
                <value>
                    <fullName>Eating Disorders</fullName>
                </value>
                <value>
                    <fullName>Endocrine and Metabolic Conditions</fullName>
                </value>
                <value>
                    <fullName>Endocrine, Immunology</fullName>
                </value>
                <value>
                    <fullName>Epilepsy</fullName>
                </value>
                <value>
                    <fullName>Gastrointestinal Conditions</fullName>
                </value>
                <value>
                    <fullName>Gynecological Conditions</fullName>
                </value>
                <value>
                    <fullName>Hearing Impairment</fullName>
                </value>
                <value>
                    <fullName>Heart Conditions</fullName>
                </value>
                <value>
                    <fullName>High Blood Pressure</fullName>
                </value>
                <value>
                    <fullName>HIV/AIDS</fullName>
                </value>
                <value>
                    <fullName>Immunologic Conditions</fullName>
                </value>
                <value>
                    <fullName>Infectious Diseases (not HIV/AIDS)</fullName>
                </value>
                <value>
                    <fullName>Injuries/Poisoning</fullName>
                </value>
                <value>
                    <fullName>Kidney Conditions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attended education event</fullName>
                </value>
                <value>
                    <fullName>California Department of Insurance</fullName>
                </value>
                <value>
                    <fullName>Covered California/Exchange</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>DMHC Help Center – warm transfer from DMHC</fullName>
                </value>
                <value>
                    <fullName>DMHC Help Center – client reported</fullName>
                </value>
                <value>
                    <fullName>Internal referral from other unit in legal services</fullName>
                </value>
                <value>
                    <fullName>OPA</fullName>
                </value>
                <value>
                    <fullName>Organization/provider referral</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outstation</fullName>
                </value>
                <value>
                    <fullName>Previous Health Client</fullName>
                </value>
                <value>
                    <fullName>Referral from a friend, family, individual</fullName>
                </value>
                <value>
                    <fullName>Saw or heard media piece, ad, etc</fullName>
                </value>
                <value>
                    <fullName>State or County Agency (other than DMHC, CDI, Covered California or OPA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interview_Language__c</fullName>
        <label>Interview Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>JS01__Citizenship_Status__c</fullName>
        <label>Citizenship Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>U.S. Citizen</fullName>
                </value>
                <value>
                    <fullName>Permanent Resident</fullName>
                </value>
                <value>
                    <fullName>Nonresident Alien</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JS01__Default_Hourly_Rate__c</fullName>
        <defaultValue>$Setup.JS01__JusticeServer_Settings__c.JS01__Default_Hourly_Rate__c</defaultValue>
        <label>Default Hourly Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JS01__Financial_Details_Date__c</fullName>
        <label>Financial Details Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JS01__Languages__c</fullName>
        <label>Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JS01__Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>JS01__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>JS01__Location__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JS01__Number_of_Adults__c</fullName>
        <label>Number of Adults</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JS01__Number_of_Children__c</fullName>
        <label>Number of Children</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JS01__Number_of_Household_Members__c</fullName>
        <formula>JS01__Number_of_Adults__c +  JS01__Number_of_Children__c + JS01__Number_of_Seniors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Adults +
Number of Children +
Number of Seniors</inlineHelpText>
        <label>Number of Household Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JS01__Number_of_Seniors__c</fullName>
        <label>Number of Seniors</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JS01__PortalUserProfileOverride__c</fullName>
        <label>PortalUserProfileOverride</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JS01__Portal_Profiles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>JS01__Poverty_Level_With_Deductions__c</fullName>
        <formula>(JS01__Total_Yearly_Income__c -  JS01__Total_Yearly_Deductions__c)  / 
($Setup.JS01__JusticeServer_Settings__c.JS01__Poverty_Level_Baseline__c + 
   IF(
      JS01__Number_of_Household_Members__c &gt; 1,
      $Setup.JS01__JusticeServer_Settings__c.JS01__Poverty_Level_Additional_Amt_Person__c * (JS01__Number_of_Household_Members__c -1),
      0
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Poverty Level (With Deductions)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JS01__Poverty_Level__c</fullName>
        <formula>JS01__Total_Yearly_Income__c / 
($Setup.JS01__JusticeServer_Settings__c.JS01__Poverty_Level_Baseline__c + 
IF( 
JS01__Number_of_Household_Members__c &gt; 1, 
$Setup.JS01__JusticeServer_Settings__c.JS01__Poverty_Level_Additional_Amt_Person__c * (JS01__Number_of_Household_Members__c -1), 
0 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Poverty Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JS01__Pro_Bono_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pro Bono Coordinator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pro_Bono_Coordinators</relationshipLabel>
        <relationshipName>Pro_Bono_Coordinators_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JS01__Pro_Bono_Portal_Status__c</fullName>
        <label>Pro Bono Portal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JS01__Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JS01__Total_Hours__c</fullName>
        <label>Total Hours</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JS01__Total_Value_of_Hours__c</fullName>
        <label>Total Value of Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JS01__Total_Yearly_Assets__c</fullName>
        <label>Total Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JS01__Total_Yearly_Deductions__c</fullName>
        <label>Total Yearly Deductions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JS01__Total_Yearly_Income__c</fullName>
        <label>Total Yearly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JS01__UserId__c</fullName>
        <label>UserId</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JS01__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_CMS_Contact_ID__c</fullName>
        <label>Local CMS Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Never Married</fullName>
                </value>
                <value>
                    <fullName>Domestic partner</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mental_Health__c</fullName>
        <label>Mental Health?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Spoken_Language__c</fullName>
        <label>Primary Spoken Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Written_Language__c</fullName>
        <label>Primary Written Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Race_Sub_Category__c</fullName>
        <label>Race Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Race__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cambodian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Hawaiian</fullName>
                </value>
                <value>
                    <fullName>Hmong</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Laotian</fullName>
                </value>
                <value>
                    <fullName>Samoan</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Other Asian</fullName>
                </value>
                <value>
                    <fullName>Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>African</fullName>
                </value>
                <value>
                    <fullName>Eastern European</fullName>
                </value>
                <value>
                    <fullName>Middle Eastern</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian/Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black/African-American</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian/Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Some Other Race</fullName>
                </value>
                <value>
                    <fullName>Unavailable/Unknown</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unborn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unborn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Veteran__c</fullName>
        <label>Veteran?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__AlternateEmail__c</fullName>
        <description>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</description>
        <inlineHelpText>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</inlineHelpText>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__HomeEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <inlineHelpText>See Preferred Email field.</inlineHelpText>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__Home_Address__c</fullName>
        <description>Formula: Uses primary address type field to determine Home Address from Mailing or Other address.</description>
        <formula>IF(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Home&quot;),
  IF(ISBLANK(MailingStreet), &quot;&quot;, MailingStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(MailingCity), &quot;&quot;, MailingCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(MailingState), &quot;&quot;, MailingState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(MailingPostalCode), &quot;&quot;, MailingPostalCode) &amp; 
  IF(ISBLANK(MailingCountry), &quot;&quot;, &quot;, &quot; &amp;MailingCountry)
,
IF(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Home&quot;),
  IF(ISBLANK(OtherStreet), &quot;&quot;, OtherStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(OtherCity), &quot;&quot;, OtherCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(OtherState), &quot;&quot;, OtherState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(OtherPostalCode), &quot;&quot;, OtherPostalCode) &amp; 
  IF(ISBLANK(OtherCountry), &quot;&quot;, &quot;, &quot; &amp; OtherCountry)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Uses primary address type field to determine Home Address from Mailing or Other address.</inlineHelpText>
        <label>Home Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Last_Donation_Date__c</fullName>
        <description>Formula:  The Last Donation Date of the Account where this Contact is the One to One Contact.   This has been superseded by the &apos;Last Gift Date&apos; field in the Households package.</description>
        <formula>if( Account.npe01__One2OneContact__c = Id ,
Account.npe01__LastDonationDate__c,
null
)</formula>
        <inlineHelpText>WARNING - This field may not accurately reflect the donation history. Please use the Last Gift Date field instead.</inlineHelpText>
        <label>DEPRECATED - Last Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Lifetime_Giving_History_Amount__c</fullName>
        <description>Formula:  The Lifetime Donation Amount of the Account where this Contact is the One to One Contact.  This field has been superseded by the &apos;Total Amount&apos; field in the Households package.</description>
        <formula>IF( Account.npe01__One2OneContact__c = Id ,
Account.npe01__LifetimeDonationHistory_Amount__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>WARNING- This field may not accurately reflect donation histories. Please use the Total Amount field on the Contact record instead.</inlineHelpText>
        <label>Lifetime Transaction Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe01__Organization_Type__c</fullName>
        <description>Formula: In order of preference, the SYSTEM_AccountType field, the Account Type field, and &quot;Organization&quot;.</description>
        <formula>NULLVALUE(IF( Account.npe01__SYSTEM_AccountType__c==&quot;&quot;, TEXT(Account.Type),Account.npe01__SYSTEM_AccountType__c),&quot;Organization&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: In order of preference, the SYSTEM_AccountType field, the Account Type field, and &quot;Organization&quot;.</inlineHelpText>
        <label>Organization Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Other_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Other, the Mailing Address.  If the Secondary Address Type is Other, the Other Address.</description>
        <formula>IF(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Other&quot;),
  IF(ISBLANK(MailingStreet), &quot;&quot;, MailingStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(MailingCity), &quot;&quot;, MailingCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(MailingState), &quot;&quot;, MailingState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(MailingPostalCode), &quot;&quot;, MailingPostalCode) &amp; 
  IF(ISBLANK(MailingCountry), &quot;&quot;, &quot;, &quot; &amp;MailingCountry)
,
IF(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Other&quot;),
  IF(ISBLANK(OtherStreet), &quot;&quot;, OtherStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(OtherCity), &quot;&quot;, OtherCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(OtherState), &quot;&quot;, OtherState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(OtherPostalCode), &quot;&quot;, OtherPostalCode) &amp; 
  IF(ISBLANK(OtherCountry), &quot;&quot;, &quot;, &quot; &amp; OtherCountry)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If the Primary Address Type is Other, the Mailing Address.  If the Secondary Address Type is Other, the Other Address.</inlineHelpText>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__PreferredPhone__c</fullName>
        <description>Which phone number should be used for most communications involving this Contact?</description>
        <inlineHelpText>Which phone number should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>